--- a/index.html
+++ b/index.html
@@ -6,10 +6,131 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assignment-2</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/0aeda3f56b.js" crossorigin="anonymous"></script>
+    <!-- style sheet -->
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
+    <header>
+        <main>
+            <!-- ----------------
+                header section 
+            ---------------------->
+            <section class="header">
+                <div class="header-item">
+                    <div class="title">
+                        <h1 class="section-title">Conmebol Copa America 2021
+                        </h1>
+                        <a class="click-button" target="_blank" href="https://www.foodpanda.com.bd/">Watch Live<i
+                                class="fas fa-arrow-right arrow"></i></a>
+                    </div>
+                    <div class="section-banner">
+                        <img src="images/banner.png" alt="">
+                    </div>
+                </div>
+            </section>
+            <!------------------- 
+                players section 
+            ---------------------->
 
+            <section class="container">
+                <div class="players">
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="">
+                        <h2 class="player-name">Lionel Messi</h2>
+                        <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward and
+                            captains the Argentina national team. </p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-3.png" alt="">
+                        <h2 class="player-name">Cristiano Ronaldo</h2>
+                        <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer
+                            captains the Portugal national team. </p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <h2 class="player-name">Neymar Jr</h2>
+                        <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer 1 club
+                            Paris Saint-Germain and the Brazil national team. </p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="">
+                        <h2 class="player-name">Paulo Dybala</h2>
+                        <p>Paulo Exequiel Dybala (born 15 November 1993) is an Argentine professional A club Juventus
+                            and the Argentina national team. </p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="">
+                        <h2 class="player-name">Mesut Ozil </h2>
+                        <p>Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper
+                            Lig club Fenerbahçe. </p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="">
+                        <h2 class="player-name">Mauro Icardi </h2>
+                        <p>Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for Ligue
+                            Paris Saint-Germain and the Argentina national team. </p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-7.png" alt="">
+                        <h2 class="player-name">Di Maria</h2>
+                        <p>Ángel Fabián Di María is an Argentine professional footballer who plays for Ligue 1 club
+                            Paris Saint-Germain and the Argentina national team. </p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-8.png" alt="">
+                        <h2 class="player-name">Kylian Mbappé</h2>
+                        <p>Kylian Mbappé Lottin is a French professional footballer who plays as a forward club Paris
+                            Saint-Germain and the France national team. </p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-9.png" alt="">
+                        <h2 class="player-name">Mohamed Salah</h2>
+                        <p>Salah started his senior career with Egyptian club Al Mokawloon, departing shortly
+                            to join Swiss side Basel for an undisclosed fee </p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-10.png" alt="">
+                        <h2 class="player-name">Harry Kane</h2>
+                        <p>Harry Edward Kane MBEis an English professional footballer who
+                            League club Tottenham Hotspur and captains the England national team. </p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-11.png" alt="">
+                        <h2 class="player-name">Kevin De Bruyne</h2>
+                        <p>Kevin De Bruyne is a Belgian professional footballer who plays as a
+                            midfielder for Premier League club Manchester City, </p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-12.png" alt="">
+                        <h2 class="player-name">Philippe Coutinho</h2>
+                        <p>Philippe Coutinho Correia is a Brazilian professional footballer
+                            or winger for Spanish club Barcelona and the Brazil national team. </p>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </header>
+
+    <!------------------------
+        footer section 
+    -------------------------->
+    <footer class="container">
+        <div class="footer-item">
+            <div class="ft-banner">
+                <img src="images/Logo.png" alt="">
+            </div>
+            <div class="ft-icon">
+                <a href="https://www.facebook.com/"><i class="fab fa-facebook empty"></i></a>
+                <a href="#"><i class="fab fa-instagram empty"></i></a>
+                <a href="https://twitter.com/home"><i class="fab fa-twitter empty"></i></a>
+                <a href="#"><i class="fab fa-linkedin empty"></i></a>
+            </div>
+            <p>Copyright © 2022 Football</p>
+        </div>
+    </footer>
 </body>
 
 </html>
