--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="title">
                         <h1 class="section-title">Conmebol Copa America 2021
                         </h1>
-                        <a class="click-button" target="_blank" href="https://www.foodpanda.com.bd/">Watch Live<i
+                        <a class="click-button" target="_blank" href="https://www.youtube.com/">Watch Live<i
                                 class="fas fa-arrow-right arrow"></i></a>
                     </div>
                     <div class="section-banner">
@@ -111,6 +111,39 @@
                     </div>
                 </div>
             </section>
+            <!----------------------
+               Extra youtube video add 
+            ------------------------->
+            <section class="container">
+                <div class="video-section">
+                    <h2 class="youtube-section-title"> YouTube Video</h2>
+                    <div class="poetry-video">
+                        <div class="poetry">
+                            <h2 class="poetry-title">আমাদের ছোট নদী<br> – রবীন্দ্রনাথ ঠাকুর</h2>
+                            <p>আমাদের ছোটো নদী চলে বাঁকে বাঁকে <br>
+                                বৈশাখ মাসে তার হাঁটু জল থাকে।<br>
+                                পার হয়ে যায় গোরু, পার হয় গাড়ি,<br>
+                                দুই ধার উঁচু তার, ঢালু তার পাড়ি।<br><br>
+
+                                চিক্ চিক্ করে বালি, কোথা নাই কাদা,<br>
+                                একধারে কাশবন ফুলে ফুলে সাদা।<br>
+                                কিচিমিচি করে সেথা শালিকের ঝাঁক,<br>
+                                রাতে ওঠে থেকে থেকে শেয়ালের হাঁক।<br><br>
+
+                                আর-পারে আমবন তালবন চলে,<br>
+                                গাঁয়ের বামুন পাড়া তারি ছায়াতলে।<br>
+                                তীরে তীরে ছেলে মেয়ে নাইবার কালে<br>
+                                গামছায় জল ভরি গায়ে তারা ঢালে।</p>
+                        </div>
+                        <div class="video">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/j_TbTiTTvBo"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </header>
 
@@ -123,10 +156,10 @@
                 <img src="images/Logo.png" alt="">
             </div>
             <div class="ft-icon">
-                <a href="https://www.facebook.com/"><i class="fab fa-facebook empty"></i></a>
-                <a href="#"><i class="fab fa-instagram empty"></i></a>
-                <a href="https://twitter.com/home"><i class="fab fa-twitter empty"></i></a>
-                <a href="#"><i class="fab fa-linkedin empty"></i></a>
+                <a target="_blank" href="https://www.facebook.com/"><i class="fab fa-facebook empty"></i></a>
+                <a target="_blank" href="https://www.instagram.com/"><i class="fab fa-instagram empty"></i></a>
+                <a target="_blank" href="https://twitter.com/home"><i class="fab fa-twitter empty"></i></a>
+                <a target="_blank" href="#"><i class="fab fa-linkedin empty"></i></a>
             </div>
             <p>Copyright © 2022 Football</p>
         </div>
