--- a/index.html
+++ b/index.html
@@ -132,26 +132,26 @@
                     </div>
                     <div class="photo-frame">
                         <div class="photo">
-                            <img src="images/best-player/player-2.jpg" alt="GF">
+                            <img src="images/best-player/player-2.jpg" alt="Neymar Jr">
                         </div>
                         <div class="photo-detail">
-                            <h3>Di Maria</h3>
+                            <h3>Neymar Jr</h3>
                             <p>
-                                Ángel Fabián Di María is an Argentine professional footballer who plays for Ligue 1 club
-                                Paris Saint-Germain and the Argentina national team.
+                                Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer 1
+                                club
+                                Paris Saint-Germain and the Brazil national team.
                             </p>
                         </div>
                     </div>
                     <div class="photo-frame">
                         <div class="photo">
-                            <img src="images/best-player/player-3.jpg" alt="GF">
+                            <img src="images/best-player/player-3.jpg" alt="Cristiano Ronaldo">
                         </div>
                         <div class="photo-detail">
-                            <h3>Emiliano Martínez</h3>
+                            <h3>Cristiano Ronaldo</h3>
                             <p>
-                                Damián Emiliano Martínez Romero is an Argentine professional
-                                footballer who plays as a goalkeeper for Premier League club Aston Villa and the
-                                Argentina national team.
+                                Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer
+                                captains the Portugal national team.
                             </p>
                         </div>
                     </div>
